--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -1,4 +1,17 @@
 @import "bootstrap"
+@import "uploadbox"
+
+
+body
+  margin: 60px 0px
+
+textarea.form-control
+  height: 250px
+
+select.form-control
+  width: 120px
+  display: inline-block
+
 
 input[type="checkbox"].form-control
   display: inline
@@ -9,3 +22,6 @@ input[type="checkbox"].form-control
 
 label.control-label
   padding: 0
+
+
+
