--- a/app/views/admin/articles/show.html.slim
+++ b/app/views/admin/articles/show.html.slim
@@ -2,7 +2,7 @@
 h1
   = @article.title
   .pull-right
-    = link_to 'Edit', edit_article_path(@article), class: 'btn btn-default'
+    = link_to 'Edit', edit_admin_article_path(@article), class: 'btn btn-default'
 
 hr
 strong = @article.category.name
