--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,11 +1,8 @@
-= simple_form_for(@user) do |f|
+= simple_form_for([:admin, @category]) do |f|
   = f.error_notification
 
   .form-inputs
     = f.input :name
-    = f.input :email
-    = f.input :password
-    = f.input :password_confirmation
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
