--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,16 @@
 @import "bootstrap"
 
+
+body
+  margin: 60px 0px
+
+textarea.form-control
+  height: 250px
+
+select.form-control
+  width: 120px
+  display: inline-block
+
 input[type="checkbox"].form-control
   display: inline
   width: auto
@@ -9,3 +20,4 @@ input[type="checkbox"].form-control
 
 label.control-label
   padding: 0
+
