Breve customização no index

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,17 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
+body
+    .container
+      .header
+        ul.nav.nav-pills.pull-right
+          li
+            a href="#"  Esportes
+          li
+            a href="#"  Entretenimento
+          li
+            a href="#"  Notícias
+        h3.text-muted Paporeto
+      .jumbotron
+        h1 Em breve seu novo portal
+        p.lead Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      .footer
+        p &copy; Paporeto 2014
 
