Adicinando novos estilos

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,25 +1,11 @@
-@import "bootstrap"
+@charset "utf-8"
+@import base
+@import common
+@import layout
+@import header
+@import footer
 
-
-body
-  margin: 60px 0px
-  background-color: #FFFFF0
-
-
-textarea.form-control
-  height: 250px
-
-select.form-control
-  width: 120px
-  display: inline-block
-
-input[type="checkbox"].form-control
-  display: inline
-  width: auto
-  height: auto
-  padding: 0
-  box-shadow: none
-
-label.control-label
-  padding: 0
-
+@import home
+@import news-section
+@import news-details
+@import page-clean
