Tornando dinamica a listagem de artigos

--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -8,6 +8,9 @@ body
 textarea.form-control
   height: 250px
 
+textarea#article_summary
+  height:  70px
+
 select.form-control
   width: 120px
   display: inline-block
