--- a/app/views/admin/articles/show.html.slim
+++ b/app/views/admin/articles/show.html.slim
@@ -3,7 +3,7 @@ h1
   = @article.title
   .pull-right
     = link_to 'Edit', edit_admin_article_path(@article), class: 'btn btn-default'
-
+p = @article.summary
 hr
 strong = @article.category.name
 .pull-right <b>Tempo de leitura:</b> Cerca de <b>#{time_to_read(@article.body)}</b>
