Integrando o artigo destaque

--- a/app/views/admin/articles/_form.html.slim
+++ b/app/views/admin/articles/_form.html.slim
@@ -9,6 +9,7 @@
     = f.input :body
     = f.input :author
     = f.input :published_at
+    = f.input :featured
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
