--- a/app/views/articles/_featured_article.slim
+++ b/app/views/articles/_featured_article.slim
@@ -1,5 +1,5 @@
 - if defined?featured_article
-  article class="#{@category.name.parameterize}"
+  article class="#{@category.slug}"
       = img featured_article.image.big,  onload: "this.parentNode.style.backgroundImage = 'url('+this.src+')'" if featured_article.image?
       .article-inner
         = link_to [@category, featured_article] do
