--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,55 +9,7 @@ section#featured-article
         h1 Lyoto Machida garante que está preparado para UFC Rio
 
 section#more-articles
-  section.category.noticias
-    = link_to '#' do
-      h1 Notícias
-    article.featured
-      = link_to '#' do
-        = image_tag 'temp/regular.jpg', width: 260, height: 196
-        h2 Skateboarding Aenean eu leo quam. Pellentesque ornare sem lacinia.
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
-
-
-  section.category.esportes
-    = link_to '#' do
-      h1 Esportes
-    article.featured
-      = link_to '#' do
-        = image_tag 'temp/regular.jpg', width: 260, height: 196
-        h2 Skateboarding Aenean eu leo quam. Pellentesque ornare sem lacinia.
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
-
-
-  section.category.entretenimento
-    = link_to '#' do
-      h1 Entretenimento
-    article.featured
-      = link_to '#' do
-        = image_tag 'temp/regular.jpg', width: 260, height: 196
-        h2 Skateboarding Aenean eu leo quam. Pellentesque ornare sem lacinia.
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
-    article
-      = link_to '#' do
-        = image_tag 'temp/thumb.jpg', width: 90, height: 80
-        h2 Vá de bike Donec id elit non mi porta gravida at eget metus...
+  = render partial: 'home/category', collection: @categories
 
 = render 'shared/send_news'
 
