--- a/app/views/home/_featured_article.slim
+++ b/app/views/home/_featured_article.slim
@@ -1,5 +1,5 @@
 - if defined?(featured_article)
   article.featured
         = link_to '#' do
-          = image_tag 'temp/regular.jpg', width: 260, height: 196
+          = img featured_article.image.small if featured_article.image?
           h2 = featured_article.title
