Adicionando Home Destaque

--- a/app/views/admin/articles/_form.html.slim
+++ b/app/views/admin/articles/_form.html.slim
@@ -10,6 +10,7 @@
     = f.input :author
     = f.input :published_at
     = f.input :featured
+    = f.input :featured_at_home
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
